--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@inotom/vue-go-top": "^1.1.0",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "firebase": "^5.9.3",
