--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "firebase": "^5.9.3",
     "register-service-worker": "^1.6.2",
+    "v-markdown-editor": "^1.0.8",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vue-simplemde": "^0.5.1",
